# auto-grader-rust

./: .gitignore  Cargo.toml  Dockerfile  rocket.toml  test_cases.json
src/: main.rs
